separating ZFS installation into two steps so that Hudson can ask for the super user password
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@15262 71c3de6d-444a-0410-be80-ed276b4c234a