@@ -345,15 +345,26 @@ public abstract class Launcher {
         public Channel launchChannel(String[] cmd, OutputStream out, FilePath workDir, Map<String,String> envVars) throws IOException {
             printCommandLine(cmd, workDir);
 
-            final EnvVars cookie = ProcessTreeKiller.createCookie();
-            EnvVars map = Launcher.inherit(envVars);
-            map.putAll(cookie);
-            final Process proc = Runtime.getRuntime().exec(cmd, Util.mapToEnv(map), toFile(workDir));
+            ProcessBuilder pb = new ProcessBuilder(cmd);
+            pb.directory(toFile(workDir));
 
-            final Thread t2 = new StreamCopyThread(Arrays.asList(cmd)+": stderr copier", proc.getErrorStream(), out);
+            return launchChannel(out, pb);
+        }
+
+        /**
+         * @param out
+         *      Where the stderr from the launched process will be sent.
+         */
+        public Channel launchChannel(OutputStream out, ProcessBuilder pb) throws IOException {
+            final EnvVars cookie = ProcessTreeKiller.createCookie();
+            pb.environment().putAll(cookie);
+
+            final Process proc = pb.start();
+
+            final Thread t2 = new StreamCopyThread(pb.command()+": stderr copier", proc.getErrorStream(), out);
             t2.start();
 
-            return new Channel("locally launched channel on "+ Arrays.toString(cmd),
+            return new Channel("locally launched channel on "+ pb.command(),
                 Computer.threadPoolForRemoting, proc.getInputStream(), proc.getOutputStream(), out) {
 
                 /**
